UI Architecture created - simple activities - colors - some drawable assets

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+
+    <color name="colorTurquoise">#66ccea</color>
+    <color name="colorTurquoiseDark">#56B0CC</color>
+
+    <color name="colorPrimary">@color/colorTurquoise</color>
+    <color name="colorPrimaryDark">@color/colorTurquoiseDark</color>
+    <color name="colorAccent">#0097A7</color>
+
 </resources>
