--- a/app/src/main/res/layout/activity_event_list.xml
+++ b/app/src/main/res/layout/activity_event_list.xml
@@ -13,7 +13,7 @@
             android:id="@+id/rootView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.main.MainActivity">
+            tools:context=".ui.event.EventListActivity">
 
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
