--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -12,5 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:progressDrawable="@color/colorPrimary"
+        android:padding="40dp"
         />
+
+    <TextView
+        android:padding="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/progress_dialog_progress"
+        android:text="@string/sync_data" />
 </RelativeLayout>
