--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -25,12 +25,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center" />
+
+            <TextView
+                android:id="@+id/txtID"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/img_icon"
+                android:text="7473" />
         </RelativeLayout>
 
 
         <LinearLayout
             android:layout_width="0px"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.85"
             android:orientation="vertical"
@@ -42,8 +50,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorTurquoise"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                android:textSize="15dp"
                 tools:text="MUHAMMET ÇAĞATAY" />
 
             <TextView
